feat(power-ups): add new power-ups, rendering logic, and constants
- Added DoubleDamage, ExpandPaddle, and FastBall power-ups with rendering updates.
- Updated AssetManager to manage new textures and references.
- Implemented render() method for power-up visuals.
- Introduced POWERUP_WIDTH and POWERUP_HEIGHT constants.
- Refactored removeEffect() to use pattern matching for instanceof for cleaner syntax.
- Fixed minor bugs related to rendering and activation.

(cherry picked from commit e308fe8c499ee8ec1d69e2107581ce7b3a50fcf3)